syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "cs236351.txmanager";

package cs236351.txmanager;

service LedgerService {
  rpc Submit (Tx) returns (Tx) {}
  rpc Notify (Tx) returns (google.protobuf.Empty) {}
}

enum Ack {
  YES = 0;
  NO = 1;
}

enum TxType {
  Regular = 0;
  TransferBased = 1;
}

message Tr {
  string address = 1;
  uint64 coins = 2;
}

message UTxO {
  string tx_id = 1;
  string address = 2;
  uint64 coins = 3;
}

message RootedTr {
  string source = 1;
  string destination = 2;
  uint64 coins = 3;
}

message Tx {
  string tx_id = 1;
  repeated UTxO inputs = 2;
  repeated Tr outputs = 3;
  string timestamp = 4;
  RootedTr rooted_tr = 5;
  TxType tx_type = 6;
}

message TxList {
  repeated Tx tx_list = 1;
}

message AckMessage {
  Ack ack = 1;
}
