syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "cs236351.txservice";

package cs236351.txservice;

service GrpcService {
  rpc InsertTx (Transaction) returns (google.protobuf.Empty) {}
  rpc ExistsTx (TxId) returns (Exists) {}
  rpc GetTx (TxId) returns (Transaction) {}
  rpc GetAllTx (google.protobuf.Empty) returns (TransactionList) {}
}

message TxId {
  uint64 id = 1;
}

message Transfer {
  string address = 1;
  uint64 amount = 2;
}

message Utxo {
  TxId txId = 1;
  string address = 2;
}

message Transaction {
  TxId txId = 1;
  repeated Utxo inputs = 2;
  repeated Transfer outputs = 3;
}

message TransactionList {
  repeated Transaction txs = 1;
}

message Exists {
  bool exists = 1;
}